--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "license": "MIT",
   "scripts": {
     "tuan": "tsc && node ./dist/tuan.js",
-    "shadow": "tsc && node ./dist/shadow.js"
+    "shadow": "tsc && node ./dist/shadow.js",
+    "yuanshen": "tsc && node ./dist/yuanshen.js"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/qs": "^6.9.7",
     "axios": "^0.26.1",
     "cookie": "^0.5.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "nodemailer": "^6.7.3",
